# pydantic_universalis

./: pyproject.toml
models/: current.py
universalis/: README.md  __init__.py  universalis.py
universalis/models/: __init__.py  current.py  history.py  tax.py  upload_count.py
